cargo-features = ["codegen-backend"]

[workspace.package]
version = "0.1.0"
authors = []
repository = "https://github.com/eigerco/axelar-solana-relayer"
homepage = "https://github.com/eigerco/axelar-solana-relayer"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -2, level = "deny" }
perf = { priority = -3, level = "deny" }
correctness = { priority = -4, level = "deny" }
restriction = { priority = -5, level = "deny" }
style = { priority = -6, level = "deny" }
suspicious = { priority = -7, level = "deny" }
pedantic = { priority = -8, level = "deny" }
nursery = { priority = -9, level = "deny" }


allow_attributes = "allow"
cargo_common_metadata = "allow"
pattern_type_mismatch = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
dbg_macro = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
missing_trait_methods = "allow"
wildcard_imports = "allow"
shadow_reuse = "allow"
exhaustive_enums = "allow"
ref_patterns = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
future_not_send = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"
negative_feature_names = "allow"
std_instead_of_alloc = "allow"
expect_used = "allow"
pub_with_shorthand = "allow"
redundant_pub_crate = "allow"
option_if_let_else = "allow"
self_named_module_files = "allow"
shadow_unrelated = "allow"

[workspace.lints.rust]
missing_docs = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "deny", priority = 0 }
unreachable_pub = { level = "warn", priority = -1 }
unused_imports = { level = "warn", priority = -1 }
unused_must_use = { level = "deny", priority = -1 }

[workspace.dependencies]
# Our crates
file-based-storage = { path = "crates/file-based-storage" }
solana-listener = { path = "crates/solana-listener", default-features = false }
common-serde-utils = { path = "crates/common-serde-utils" }
solana-event-forwarder = { path = "crates/solana-event-forwarder", default-features = false }
solana-tx-pusher = { path = "crates/solana-tx-pusher" }
rest-service = { path = "crates/rest-service", default-features = false }
retrying-solana-http-sender = { path = "crates/retrying-solana-http-sender" }
solana-gateway-task-processor = { path = "crates/solana-gateway-task-processor", default-features = false }
effective-tx-sender = { path = "crates/effective-tx-sender" }
gateway-gas-computation = { path = "crates/gateway-gas-computation", default-features = false }

# Relayer core
amplifier-api = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
relayer-engine = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
relayer-amplifier-api-integration = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6", package = "common-serde-utils" }

# Solana Gateway
# ⚠️ If you change the revision here make sure to also update the *.so files.
# Have them built in the amplifier then copy them:
# `cp ../axelar-amplifier-solana/target/deploy/*.so ./tests/fixtures`
axelar-solana-gateway = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", features = ["no-entrypoint"], default-features = false }
axelar-solana-its = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", features = ["no-entrypoint"], default-features = false }
axelar-solana-governance = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", features = ["no-entrypoint"], default-features = false }
gateway-event-stack = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
axelar-solana-encoding = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
axelar-solana-gas-service = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", features = ["no-entrypoint"], default-features = false }
axelar-solana-gas-service-events = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
axelar-solana-memo-program = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", features = ["no-entrypoint"], default-features = false }
axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
axelar-message-primitives = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
axelar-executable = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
its-instruction-builder = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }
interchain-token-transfer-gmp = { git = "https://github.com/eigerco/axelar-amplifier-solana.git", rev = "f4da7b6", default-features = false }

# CLI
clap = { version = "4", features = ["derive", "env"] }
xshell = "0.2"

# Utils
arrayvec = "0.7"
borsh = "1"
url = { version = "2.5", features = ["serde"] }
temp-env = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
base64 = "0.22"
bs58 = "0.5"
redact = { version = "0.1", features = ["serde"] }
thiserror = "1"
uuid = { version = "1.2", features = ["v4", "serde"] }
typed-builder = "0.2"
derive_builder = "0.20"
bnum = "0.12"
hex = "0.4"
quanta = "0.12"
backoff = { version = "0.4", features = ["tokio"] }
indoc = "2"
itertools = "0.13"
num-traits = "0.2"
memmap2 = "0.9"
bytemuck = "1.19"
dotenvy = "0.15.7"

# Serde
bincode = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
simd-json = "0.14"

# Tests
mockall = "0.13"
pretty_assertions = "1"
rstest = { version = "0.23" }
serial_test = "3.2"
test-log = { version = "0.2", features = ["trace"], default-features = false }
rand = "0.8.5"

# Errors
eyre = "0.6"
color-eyre = "0.6"

# HTTP
axum = "0.7.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls", "stream", "http2"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower = { version = "0.5.2", features = ["limit"] }

# Solana
solana-client = "~2.1"
solana-test-validator = "~2.1"
solana-rpc-client = "~2.1"
solana-rpc = "~2.1"
solana-rpc-client-api = "~2.1"
solana-program = "~2.1"
solana-sdk = "~2.1"
solana-transaction-status = "~2.1"
solana-compute-budget = "~2.1"

# Async
tokio = { version = "1", features = ["rt", "signal", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
tokio-util = "0.7"
futures-concurrency = "7.4"
futures-util = "0.3"
futures = "0.3"
async-trait = "0"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log", "json", "valuable", "tracing"] }
tracing-error = "0.2"

# opentelemetry
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", default-features = false, features = ["trace", "tokio", "logs", "metrics", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.30", default-features = false, features = ["metrics"] }
opentelemetry-semantic-conventions = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-appender-tracing = { version = "0.29" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
# codegen-backend = "cranelift" (not supported on m1 mac)
