[package]
name = "common-serde-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
solana-sdk = { workspace = true }
tracing.workspace = true

[lints]
workspace = true
