[package]
name = "rest-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
amplifier-api.workspace = true
axelar-solana-gateway.workspace = true
axum.workspace = true
clap.workspace = true
eyre.workspace = true
futures.workspace = true
gateway-event-stack.workspace = true
indoc.workspace = true
relayer-amplifier-api-integration.workspace = true
relayer-engine.workspace = true
serde.workspace = true
solana-client.workspace = true
solana-listener.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
test-log.workspace = true

[lints]
workspace = true

[features]
devnet-amplifier = [
    "axelar-solana-gateway/devnet-amplifier",
    "gateway-event-stack/devnet-amplifier",
    "solana-listener/devnet-amplifier"
]
stagenet = [
    "axelar-solana-gateway/stagenet",
    "gateway-event-stack/stagenet",
    "solana-listener/stagenet"
]
testnet = [
    "axelar-solana-gateway/testnet",
    "gateway-event-stack/testnet",
    "solana-listener/testnet"
]
mainnet = [
    "axelar-solana-gateway/mainnet",
    "gateway-event-stack/mainnet",
    "solana-listener/mainnet"
]
default = ["devnet-amplifier"]
