[package]
name = "solana-axelar-relayer"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
relayer-engine.workspace = true
eyre.workspace = true
color-eyre.workspace = true
toml.workspace = true
tokio.workspace = true
serde.workspace = true
relayer-amplifier-api-integration.workspace = true
rest-service.workspace = true
solana-listener.workspace = true
solana-event-forwarder.workspace = true
solana-gateway-task-processor.workspace = true
retrying-solana-http-sender.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-appender-tracing.workspace = true
file-based-storage.workspace = true
clap.workspace = true
dotenvy.workspace = true

[dev-dependencies]
temp-env.workspace = true
amplifier-api.workspace = true
pretty_assertions.workspace = true
indoc.workspace = true

[lints]
workspace = true

[features]
devnet-amplifier = [
    "rest-service/devnet-amplifier",
    "solana-event-forwarder/devnet-amplifier",
    "solana-gateway-task-processor/devnet-amplifier",
    "solana-listener/devnet-amplifier"
]
stagenet = [
    "rest-service/stagenet",
    "solana-event-forwarder/stagenet",
    "solana-gateway-task-processor/stagenet",
    "solana-listener/stagenet"
]
testnet = [
    "rest-service/testnet",
    "solana-event-forwarder/testnet",
    "solana-gateway-task-processor/testnet",
    "solana-listener/testnet"
]
mainnet = [
    "rest-service/mainnet",
    "solana-event-forwarder/mainnet",
    "solana-gateway-task-processor/mainnet",
    "solana-listener/mainnet"
]
default = ["devnet-amplifier"]
