[package]
name = "solana-event-forwarder"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
axelar-solana-gas-service.workspace = true
axelar-solana-gas-service-events.workspace = true
solana-gateway-task-processor.workspace = true
relayer-amplifier-api-integration.workspace = true
gateway-gas-computation.workspace = true
solana-listener.workspace = true
relayer-engine.workspace = true
tracing.workspace = true
eyre.workspace = true
bs58.workspace = true
solana-sdk.workspace = true
axelar-solana-gateway.workspace = true
itertools.workspace = true
axelar-executable.workspace = true
gateway-event-stack.workspace = true
solana-rpc-client.workspace = true

[dev-dependencies]
base64.workspace = true
serial_test.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
retrying-solana-http-sender.workspace = true
axelar-solana-memo-program.workspace = true
solana-test-validator.workspace = true
solana-rpc-client-api.workspace = true
solana-rpc.workspace = true
test-log.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true
axelar-solana-encoding.workspace = true

[lints]
workspace = true
