[package]
name = "solana-event-forwarder"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
axelar-solana-gas-service.workspace = true
axelar-solana-gas-service-events.workspace = true
solana-gateway-task-processor.workspace = true
relayer-amplifier-api-integration.workspace = true
gateway-gas-computation.workspace = true
solana-listener.workspace = true
relayer-engine.workspace = true
tracing.workspace = true
eyre.workspace = true
bs58.workspace = true
solana-sdk.workspace = true
axelar-solana-gateway.workspace = true
itertools.workspace = true
axelar-executable.workspace = true
gateway-event-stack.workspace = true
solana-rpc-client.workspace = true

[dev-dependencies]
base64.workspace = true
serial_test.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
retrying-solana-http-sender.workspace = true
axelar-solana-memo-program.workspace = true
solana-test-validator.workspace = true
solana-rpc-client-api.workspace = true
solana-rpc.workspace = true
test-log.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true
axelar-solana-encoding.workspace = true

[lints]
workspace = true

[features]
devnet-amplifier = [
    "axelar-executable/devnet-amplifier",
    "axelar-solana-gas-service/devnet-amplifier",
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
    "axelar-solana-memo-program/devnet-amplifier",
    "gateway-event-stack/devnet-amplifier",
    "gateway-gas-computation/devnet-amplifier",
    "solana-gateway-task-processor/devnet-amplifier",
    "solana-listener/devnet-amplifier"
]
stagenet = [
    "axelar-executable/stagenet",
    "axelar-solana-gas-service/stagenet",
    "axelar-solana-gateway-test-fixtures/stagenet",
    "axelar-solana-gateway/stagenet",
    "axelar-solana-memo-program/stagenet",
    "gateway-event-stack/stagenet",
    "gateway-gas-computation/stagenet",
    "solana-gateway-task-processor/stagenet",
    "solana-listener/stagenet"
]
testnet = [
    "axelar-executable/testnet",
    "axelar-solana-gas-service/testnet",
    "axelar-solana-gateway-test-fixtures/testnet",
    "axelar-solana-gateway/testnet",
    "axelar-solana-memo-program/testnet",
    "gateway-event-stack/testnet",
    "gateway-gas-computation/testnet",
    "solana-gateway-task-processor/testnet",
    "solana-listener/testnet"
]
mainnet = [
    "axelar-executable/mainnet",
    "axelar-solana-gas-service/mainnet",
    "axelar-solana-gateway-test-fixtures/mainnet",
    "axelar-solana-gateway/mainnet",
    "axelar-solana-memo-program/mainnet",
    "gateway-event-stack/mainnet",
    "gateway-gas-computation/mainnet",
    "solana-gateway-task-processor/mainnet",
    "solana-listener/mainnet"
]
default = ["devnet-amplifier"]
