[package]
name = "solana-gateway-task-processor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
amplifier-api.workspace = true
async-trait.workspace = true
axelar-executable.workspace = true
axelar-solana-encoding.workspace = true
axelar-solana-gas-service.workspace = true
axelar-solana-gateway.workspace = true
axelar-solana-governance.workspace = true
axelar-solana-its.workspace = true
axelar-solana-memo-program.workspace = true
bincode.workspace = true
bs58.workspace = true
clap.workspace = true
common-serde-utils = { workspace = true }
effective-tx-sender.workspace = true
eyre.workspace = true
futures.workspace = true
gateway-gas-computation.workspace = true
its-instruction-builder.workspace = true
num-traits.workspace = true
relayer-amplifier-api-integration.workspace = true
relayer-amplifier-state.workspace = true
relayer-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-listener.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
typed-builder.workspace = true

[dev-dependencies]
async-trait.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
axelar-solana-memo-program.workspace = true
base64.workspace = true
file-based-storage.workspace = true
mockall.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
retrying-solana-http-sender.workspace = true
solana-rpc-client-api.workspace = true
solana-rpc.workspace = true
solana-test-validator.workspace = true
solana-transaction-status.workspace = true
test-log.workspace = true
uuid.workspace = true
interchain-token-transfer-gmp.workspace = true

[lints]
workspace = true

[features]
devnet-amplifier = [
    "axelar-executable/devnet-amplifier",
    "axelar-solana-gas-service/devnet-amplifier",
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
    "axelar-solana-governance/devnet-amplifier",
    "axelar-solana-its/devnet-amplifier",
    "axelar-solana-memo-program/devnet-amplifier",
    "gateway-gas-computation/devnet-amplifier",
    "its-instruction-builder/devnet-amplifier",
    "solana-listener/devnet-amplifier"
]
stagenet = [
    "axelar-executable/stagenet",
    "axelar-solana-gas-service/stagenet",
    "axelar-solana-gateway-test-fixtures/stagenet",
    "axelar-solana-gateway/stagenet",
    "axelar-solana-governance/stagenet",
    "axelar-solana-its/stagenet",
    "axelar-solana-memo-program/stagenet",
    "gateway-gas-computation/stagenet",
    "its-instruction-builder/stagenet",
    "solana-listener/stagenet"
]
testnet = [
    "axelar-executable/testnet",
    "axelar-solana-gas-service/testnet",
    "axelar-solana-gateway-test-fixtures/testnet",
    "axelar-solana-gateway/testnet",
    "axelar-solana-governance/testnet",
    "axelar-solana-its/testnet",
    "axelar-solana-memo-program/testnet",
    "gateway-gas-computation/testnet",
    "its-instruction-builder/testnet",
    "solana-listener/testnet"
]
mainnet = [
    "axelar-executable/mainnet",
    "axelar-solana-gas-service/mainnet",
    "axelar-solana-gateway-test-fixtures/mainnet",
    "axelar-solana-gateway/mainnet",
    "axelar-solana-governance/mainnet",
    "axelar-solana-its/mainnet",
    "axelar-solana-memo-program/mainnet",
    "gateway-gas-computation/mainnet",
    "its-instruction-builder/mainnet",
    "solana-listener/mainnet"
]
default = ["devnet-amplifier"]
