[package]
name = "solana-listener"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
typed-builder.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
eyre.workspace = true
url.workspace = true
serde.workspace = true
relayer-engine.workspace = true
chrono.workspace = true
axelar-solana-gateway.workspace = true
common-serde-utils.workspace = true
core-common-serde-utils.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
axelar-solana-gas-service.workspace = true
solana-rpc-client-api.workspace = true
backoff.workspace = true

[dev-dependencies]
axelar-solana-gateway-test-fixtures.workspace = true
retrying-solana-http-sender.workspace = true
axelar-solana-memo-program.workspace = true
solana-test-validator.workspace = true
solana-rpc-client-api.workspace = true
solana-rpc.workspace = true
test-log.workspace = true
serial_test.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
