[package]
name = "solana-listener"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
typed-builder.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
eyre.workspace = true
url.workspace = true
serde.workspace = true
relayer-engine.workspace = true
chrono.workspace = true
axelar-solana-gateway.workspace = true
common-serde-utils.workspace = true
core-common-serde-utils.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
file-based-storage.workspace = true
solana-transaction-status.workspace = true
axelar-solana-gas-service.workspace = true
solana-rpc-client-api.workspace = true
backoff.workspace = true
clap.workspace = true

[dev-dependencies]
axelar-solana-gateway-test-fixtures.workspace = true
retrying-solana-http-sender.workspace = true
axelar-solana-memo-program.workspace = true
solana-test-validator.workspace = true
solana-rpc-client-api.workspace = true
solana-rpc.workspace = true
test-log.workspace = true
serial_test.workspace = true
pretty_assertions.workspace = true
uuid.workspace = true

[lints]
workspace = true

[features]
devnet-amplifier = [
    "axelar-solana-gas-service/devnet-amplifier",
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
    "axelar-solana-memo-program/devnet-amplifier"
]
stagenet = [
    "axelar-solana-gas-service/stagenet",
    "axelar-solana-gateway-test-fixtures/stagenet",
    "axelar-solana-gateway/stagenet",
    "axelar-solana-memo-program/stagenet"
]
testnet = [
    "axelar-solana-gas-service/testnet",
    "axelar-solana-gateway-test-fixtures/testnet",
    "axelar-solana-gateway/testnet",
    "axelar-solana-memo-program/testnet"
]
mainnet = [
    "axelar-solana-gas-service/mainnet",
    "axelar-solana-gateway-test-fixtures/mainnet",
    "axelar-solana-gateway/mainnet",
    "axelar-solana-memo-program/mainnet"
]
default = ["devnet-amplifier"]
